syntax = "proto3";
option go_package = "Chittychat/grpc/proto";

message Posts {
    repeated string posts = 1;
    int64 lamport_time = 2;
}

message Empty {}

service ChittychatDB {
    rpc GetPosts (ClientLT) returns (Posts) {};
    rpc PublishPost (Post) returns (Posted) {};

    rpc Connect (ClientInfo) returns (Empty) {};
    rpc Disconnect (ClientInfo) returns (Empty) {};
}

message ClientInfo {
    int64 cn = 1;
    int64 lamport_time = 2;
}

message Post {
    string post = 1;
    int64 lamport_time = 2;
}

message Posted {
    bool posted = 1;
    int64 lamport_time = 2;
}

message ClientLT {
    int64 lamport_time = 1;
}
